--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:public:barbershop": "pwsh ./scripts/test_public_barbershop.ps1",
     "test:public:availability": "pwsh ./scripts/test_public_availability.ps1",
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "db:rls": "psql $DATABASE_URL -f scripts/rls.sql",
