feat: add sync workflow to prevent local/production desync
- Add sync-check.mjs script to verify synchronization
- Add dev:check command for development with verification
- Add sync:check command for manual verification
- Add documentation for sync workflow
- Monitor critical files: page.tsx, logo.tsx, next.config.js, package.json

--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "test:public:barbershop": "pwsh ./scripts/test_public_barbershop.ps1",
     "test:public:availability": "pwsh ./scripts/test_public_availability.ps1",
     "dev": "next dev",
+    "dev:check": "node scripts/sync-check.mjs && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "sync:check": "node scripts/sync-check.mjs",
     "db:rls": "psql $DATABASE_URL -f scripts/rls.sql",
     "db:indices": "psql $DATABASE_URL -f scripts/indices.sql",
     "db:test-rls": "psql $DATABASE_URL -f scripts/test-rls.sql",
