fix: adicionar prisma generate no build para Vercel
- Corrigir erro de Prisma Client desatualizado na Vercel
- Adicionar comando prisma generate antes do next build
- Resolver problema de cache de dependências na Vercel

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:public:availability": "pwsh ./scripts/test_public_availability.ps1",
     "dev": "next dev",
     "dev:check": "node scripts/sync-check.mjs && next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "sync:check": "node scripts/sync-check.mjs",
