fix: remover redirecionamento automático da página inicial
- Remover redirect de / para /b/barber-labs-centro no vercel.json
- Permitir acesso à página inicial sem redirecionamento forçado
- Corrigir comportamento inesperado da URL principal

--- a/vercel.json
+++ b/vercel.json
@@ -60,11 +60,5 @@
       "destination": "/admin/[path]"
     }
   ],
-  "redirects": [
-    {
-      "source": "/",
-      "destination": "/b/barber-labs-centro",
-      "permanent": false
-    }
-  ]
+  "redirects": []
 }
