--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
     "drizzle-kit": "^0.20.0",
     "drizzle-orm": "^0.29.0",
